--- a/menu.css
+++ b/menu.css
@@ -8,6 +8,7 @@
   .menu-button img {
     height: 40px;
     width: 40px;
+    filter: invert(100%);
   }
   .menu-container {
     position: fixed;
