--- a/player.css
+++ b/player.css
@@ -55,7 +55,6 @@ color: white;
 z-index: 2;
 }
 .current-time {
-margin-left: 15px;
 margin-top: 10px;
 color: white;
 opacity: 0%;
@@ -66,3 +65,8 @@ height: 65px;
 width: 65px;
 opacity: 0%;
 }
+
+.playing-details {
+    position: block;
+    margin-left: 15px;
+   }
