--- a/player.css
+++ b/player.css
@@ -57,13 +57,13 @@ z-index: 2;
 .current-time {
 margin-top: 10px;
 color: white;
-opacity: 0%;
+opacity: 0%
 }
 
 .song-playing {
 height: 65px;
 width: 65px;
-opacity: 0%;
+opacity: 0%
 }
 
 .playing-details {
@@ -76,4 +76,5 @@ opacity: 0%;
   overflow: hidden;
       max-width: 25vw;
       background-color: transparent;
+      opacity: 0;
    }
