--- a/player.css
+++ b/player.css
@@ -5,12 +5,12 @@
     width: 100%;
     height: 80px;
     background-color: black;
-    display: flex;
+	 display: flex;
 }
 
 .play-pause-image {
     height: 60px;
-    width: auto;
+    width: 60px;
 }
 
 .progress-bar-container {
@@ -33,8 +33,10 @@ width: 0;
 }
 
 .play-pause-container {
-    margin-left: calc(-50vw + 50%);
-    margin-right: calc(-50vw + 50%);
+	position: absolute;
+    left: 50%;
+	 transform: translateX(-50%);
+	 bottom: 0;
 }
 
 .audio {
@@ -76,3 +78,14 @@ opacity: 0%
       background-color: transparent;
       opacity: 0;
    }
+
+   .save-button-container {
+    left: 130px;
+      bottom: 0px;
+      position: absolute;
+      
+ }
+ .save-button{
+    height: 35px;
+    width: auto;
+ }
